Repeater: Tab - Make sure label is hidden when subfield visibility is hidden

--- a/assets/src/components/repeater/layout/tab/index.scss
+++ b/assets/src/components/repeater/layout/tab/index.scss
@@ -121,8 +121,14 @@
     & > div[class*='tf-context-'] {
       width: 100%;
     }
+  }
 
-    
+  /**
+   * Make sure we hide label for fields with visibility condition set
+   * to hide
+   */
+  &:has(> .tf-repeater-tab-item-field > div[class*='tf-context-']:empty) {
+    display: none;
   }
 
   /**
